--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,8 @@
-name: test
+name: papers-scrap
 channels:
   - anaconda
   - defaults
   - conda-forge
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
@@ -27,6 +25,7 @@ dependencies:
   - cffi=1.17.1=py312h1fdaa30_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - click=8.1.7=py312h06a4308_0
+  - colorama=0.4.6=py312h06a4308_0
   - comm=0.2.1=py312h06a4308_0
   - contourpy=1.3.1=py312hdb19cb5_0
   - cycler=0.11.0=pyhd3eb1b0_0
@@ -192,7 +191,7 @@ dependencies:
   - tinycss2=1.4.0=py312h06a4308_0
   - tk=8.6.14=h39e8969_0
   - tornado=6.4.2=py312h5eee18b_0
-  - tqdm=4.67.1=py312he106c6f_0
+  - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=py312h06a4308_0
   - typing-extensions=4.12.2=py312h06a4308_0
   - typing_extensions=4.12.2=py312h06a4308_0
