--- a/environment.yml
+++ b/environment.yml
@@ -1,175 +1,229 @@
-name: papers-scrap
+name: papers_scrap
 channels:
   - anaconda
+  - pytorch
   - defaults
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - aiohappyeyeballs=2.4.4=py312h06a4308_0
+  - aiohttp=3.11.10=py312h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
   - anyio=4.6.2=py312h06a4308_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
   - argon2-cffi-bindings=21.2.0=py312h5eee18b_1
-  - asttokens=2.0.5=pyhd3eb1b0_0
+  - arrow-cpp=19.0.0=h865e1df_2
+  - asttokens=3.0.0=py312h06a4308_0
   - async-lru=2.0.4=py312h06a4308_0
   - attrs=24.3.0=py312h06a4308_0
+  - aws-c-auth=0.6.19=h5eee18b_0
+  - aws-c-cal=0.5.20=hdbd6064_0
+  - aws-c-common=0.8.5=h5eee18b_0
+  - aws-c-compression=0.2.16=h5eee18b_0
+  - aws-c-event-stream=0.2.15=h6a678d5_0
+  - aws-c-http=0.6.25=h5eee18b_0
+  - aws-c-io=0.13.10=h5eee18b_0
+  - aws-c-mqtt=0.7.13=h5eee18b_0
+  - aws-c-s3=0.1.51=hdbd6064_0
+  - aws-c-sdkutils=0.1.6=h5eee18b_0
+  - aws-checksums=0.1.13=h5eee18b_0
+  - aws-crt-cpp=0.18.16=h6a678d5_0
+  - aws-sdk-cpp=1.11.212=hecad206_0
   - babel=2.16.0=py312h06a4308_0
   - beautifulsoup4=4.12.3=py312h06a4308_0
-  - blas=1.0=openblas
+  - blas=1.0=mkl
   - bleach=6.2.0=py312h06a4308_0
+  - blinker=1.9.0=py312h06a4308_0
+  - boost-cpp=1.82.0=hdb19cb5_2
   - bottleneck=1.4.2=py312ha883a20_0
   - brotli-python=1.0.9=py312h6a678d5_9
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.12.31=h06a4308_0
+  - ca-certificates=2025.2.25=h06a4308_0
   - certifi=2025.1.31=py312h06a4308_0
   - cffi=1.17.1=py312h1fdaa30_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - click=8.1.7=py312h06a4308_0
-  - colorama=0.4.6=py312h06a4308_0
+  - click=8.1.8=py312h06a4308_0
   - comm=0.2.1=py312h06a4308_0
   - contourpy=1.3.1=py312hdb19cb5_0
+  - cuda-cudart=12.4.127=h99ab3db_0
+  - cuda-cudart_linux-64=12.4.127=hd681fbe_0
+  - cuda-cupti=12.4.127=h6a678d5_1
+  - cuda-libraries=12.4.1=h06a4308_1
+  - cuda-nvrtc=12.4.127=h99ab3db_1
+  - cuda-nvtx=12.4.127=h6a678d5_1
+  - cuda-opencl=12.4.127=h6a678d5_0
+  - cuda-runtime=12.4.1=hb982923_0
+  - cuda-version=12.4=hbda6634_3
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
+  - datasets=3.3.2=py312h06a4308_0
   - debugpy=1.8.11=py312h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
+  - dill=0.3.8=py312h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.6.4=h6a678d5_0
-  - fontconfig=2.14.1=hef1e5e3_0
+  - faiss=1.8.0=py312cuda120h53c0f38_1_cuda
+  - faiss-gpu=1.8.0=h0240f8b_2
+  - filelock=3.17.0=py312h06a4308_0
+  - flask=3.1.0=py312h06a4308_0
   - fonttools=4.55.3=py312h5eee18b_0
-  - freetype=2.12.1=h4a9f257_0
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
+  - freetype=2.13.3=h4a9f257_0
+  - frozenlist=1.5.0=py312h5eee18b_0
+  - fsspec=2024.12.0=py312h06a4308_0
+  - gflags=2.2.2=h6a678d5_1
+  - glog=0.5.0=h6a678d5_1
+  - gmp=6.3.0=h6a678d5_0
+  - gmpy2=2.2.1=py312h5eee18b_0
   - h11=0.14.0=py312h06a4308_0
   - httpcore=1.0.2=py312h06a4308_0
   - httpx=0.27.0=py312h06a4308_0
-  - icu=58.2=he6710b0_3
+  - huggingface_hub=0.30.2=pyhd8ed1ab_0
+  - icu=73.1=h6a678d5_0
   - idna=3.7=py312h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
   - ipykernel=6.29.5=py312h06a4308_1
   - ipython=8.30.0=py312h06a4308_0
-  - ipywidgets=8.1.5=py312h06a4308_0
+  - itsdangerous=2.2.0=py312h06a4308_0
   - jedi=0.19.2=py312h06a4308_0
-  - jinja2=3.1.5=py312h06a4308_0
+  - jinja2=3.1.6=py312h06a4308_0
   - joblib=1.4.2=py312h06a4308_0
   - jpeg=9e=h5eee18b_3
   - json5=0.9.25=py312h06a4308_0
   - jsonschema=4.23.0=py312h06a4308_0
   - jsonschema-specifications=2023.7.1=py312h06a4308_0
-  - jupyter=1.1.1=py312h06a4308_0
   - jupyter-lsp=2.2.0=py312h06a4308_0
   - jupyter_client=8.6.3=py312h06a4308_0
-  - jupyter_console=6.6.3=py312h06a4308_1
   - jupyter_core=5.7.2=py312h06a4308_0
-  - jupyter_events=0.10.0=py312h06a4308_0
-  - jupyter_server=2.14.1=py312h06a4308_0
+  - jupyter_events=0.12.0=py312h06a4308_0
+  - jupyter_server=2.15.0=py312h06a4308_0
   - jupyter_server_terminals=0.4.4=py312h06a4308_1
   - jupyterlab=4.3.4=py312h06a4308_0
-  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_pygments=0.3.0=py312h06a4308_0
   - jupyterlab_server=2.27.3=py312h06a4308_0
-  - jupyterlab_widgets=3.0.13=py312h06a4308_0
   - kiwisolver=1.4.8=py312h6a678d5_0
   - krb5=1.20.1=h143b758_1
   - lcms2=2.16=hb9589c4_0
   - ld_impl_linux-64=2.40=h12ee557_0
   - lerc=4.0.0=h6a678d5_0
-  - libabseil=20240116.2=cxx17_h6a678d5_0
-  - libclang=14.0.6=default_hc6dbbc7_2
-  - libclang13=14.0.6=default_he11475f_2
-  - libcups=2.4.2=h2d74bed_1
-  - libcurl=8.12.0=hc9e6f67_0
+  - libabseil=20250127.0=cxx17_h6a678d5_0
+  - libblas=3.9.0=1_h86c2bf4_netlib
+  - libboost=1.82.0=h109eef0_2
+  - libbrotlicommon=1.0.9=h5eee18b_9
+  - libbrotlidec=1.0.9=h5eee18b_9
+  - libbrotlienc=1.0.9=h5eee18b_9
+  - libcublas=12.4.5.8=h99ab3db_1
+  - libcufft=11.2.1.3=h99ab3db_1
+  - libcufile=1.9.1.3=h99ab3db_1
+  - libcurand=10.3.5.147=h99ab3db_1
+  - libcurl=8.12.1=hc9e6f67_0
+  - libcusolver=11.6.1.9=h99ab3db_1
+  - libcusparse=12.3.1.170=h99ab3db_1
   - libdeflate=1.22=h5eee18b_0
   - libedit=3.1.20230828=h5eee18b_0
   - libev=4.33=h7f8727e_1
-  - libexpat=2.6.4=h5888daf_0
+  - libevent=2.1.12=hdbd6064_1
+  - libexpat=2.7.0=h5888daf_0
+  - libfaiss=1.8.0=cuda120h03f6ba9_1_cuda
   - libffi=3.4.4=h6a678d5_1
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
+  - libgcc=14.2.0=h767d61c_2
+  - libgcc-ng=14.2.0=h69a702a_2
   - libgfortran-ng=11.2.0=h00389a5_1
   - libgfortran5=11.2.0=h1234567_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=14.2.0=h77fa898_1
-  - libiconv=1.16=h5eee18b_3
-  - libllvm14=14.0.6=hecde1de_4
+  - libgomp=14.2.0=h767d61c_2
+  - libgrpc=1.71.0=h2d74bed_0
+  - liblapack=3.9.0=5_h92ddd45_netlib
   - libnghttp2=1.57.0=h2d74bed_0
+  - libnpp=12.2.5.30=h99ab3db_1
   - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.21=h043d6bf_0
+  - libnvfatbin=12.4.127=h7934f7d_2
+  - libnvjitlink=12.4.127=h99ab3db_1
+  - libnvjpeg=12.3.1.117=h6a678d5_1
   - libpng=1.6.39=h5eee18b_0
-  - libpq=12.20=hdbd6064_0
-  - libprotobuf=4.25.3=he621ea3_0
+  - libprotobuf=5.29.3=hc99497a_0
+  - libre2-11=2024.07.02=h6a678d5_0
   - libsodium=1.0.18=h7b6447c_0
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.1=h251f7ec_0
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
+  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx-ng=14.2.0=h4852527_2
+  - libthrift=0.15.0=h1795dd8_2
   - libtiff=4.5.1=hffd6297_1
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.3.2=h5eee18b_1
-  - libxcb=1.15=h7f8727e_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxkbcommon=1.0.1=hfa300c1_0
-  - libxml2=2.9.14=h74e7548_0
   - libzlib=1.2.13=h4ab18f5_6
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - llvmlite=0.44.0=py312hc1e8f15_1
   - lz4-c=1.9.4=h6a678d5_1
   - markupsafe=3.0.2=py312h5eee18b_0
-  - matplotlib=3.9.1=py312h7900ff3_1
-  - matplotlib-base=3.9.1=py312h854627b_2
+  - matplotlib-base=3.10.0=py312hbfdbfaf_0
   - matplotlib-inline=0.1.6=py312h06a4308_0
-  - mistune=2.0.4=py312h06a4308_0
-  - mysql=5.7.24=h721c034_2
-  - nbclient=0.8.0=py312h06a4308_0
-  - nbconvert=7.16.4=py312h06a4308_0
+  - mistune=3.1.2=py312h06a4308_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py312h5eee18b_2
+  - mkl_fft=1.3.11=py312h5eee18b_0
+  - mkl_random=1.2.8=py312h526ad5a_0
+  - mpc=1.3.1=h5eee18b_0
+  - mpfr=4.2.1=h5eee18b_0
+  - mpmath=1.3.0=py312h06a4308_0
+  - multidict=6.1.0=py312h5eee18b_0
+  - multiprocess=0.70.15=py312h06a4308_0
+  - nbclient=0.10.2=py312h06a4308_0
+  - nbconvert-core=7.16.6=py312h06a4308_0
   - nbformat=5.10.4=py312h06a4308_0
-  - ncurses=6.4=h6a678d5_0
+  - ncurses=6.5=h2d0b736_3
   - nest-asyncio=1.6.0=py312h06a4308_0
-  - nltk=3.9.1=py312h06a4308_0
+  - networkx=3.4.2=py312h06a4308_0
+  - nltk=3.9.1=pyhd8ed1ab_1
   - notebook=7.3.2=py312h06a4308_0
-  - notebook-shim=0.2.3=py312h06a4308_0
-  - numexpr=2.10.1=py312hd28fd6d_0
-  - numpy=2.0.1=py312h2809609_1
-  - numpy-base=2.0.1=py312he1a6c75_1
+  - notebook-shim=0.2.4=py312h06a4308_0
+  - numba=0.61.0=py312h6a678d5_1
+  - numexpr=2.10.1=py312h3c60e43_0
+  - numpy=1.26.4=py312hc5e2394_0
+  - numpy-base=1.26.4=py312h0da6c21_0
+  - ocl-icd=2.3.2=h5eee18b_1
   - openjpeg=2.5.2=he7f1fd0_0
-  - openldap=2.6.4=h42fbc30_0
-  - openssl=3.4.1=h7b32b05_0
+  - openssl=3.5.0=h7b32b05_0
+  - orc=2.1.1=hd396ef6_0
   - overrides=7.4.0=py312h06a4308_0
   - packaging=24.2=py312h06a4308_0
   - pandas=2.2.3=py312h6a678d5_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.4=py312h06a4308_0
-  - pcre2=10.42=hebb0a14_1
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pillow=11.1.0=py312hcea889d_0
   - pip=25.0=py312h06a4308_0
-  - platformdirs=3.10.0=py312h06a4308_0
-  - ply=3.11=py312h06a4308_1
-  - prometheus_client=0.21.0=py312h06a4308_0
+  - platformdirs=4.3.7=py312h06a4308_0
+  - plotly=5.24.1=py312he106c6f_1
+  - prometheus_client=0.21.1=py312h06a4308_0
   - prompt-toolkit=3.0.43=py312h06a4308_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - propcache=0.3.1=py312h5eee18b_0
   - psutil=5.9.0=py312h5eee18b_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pyarrow=19.0.0=py312h6a678d5_1
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py312h06a4308_1
+  - pynndescent=0.5.10=py312h06a4308_0
   - pyparsing=3.2.0=py312h06a4308_0
-  - pyqt=5.15.10=py312h6a678d5_1
-  - pyqt5-sip=12.13.0=py312h5eee18b_1
   - pysocks=1.7.1=py312h06a4308_0
-  - python=3.12.2=hab00c5b_0_cpython
+  - python=3.12.3=hab00c5b_0_cpython
   - python-dateutil=2.9.0post0=py312h06a4308_2
-  - python-dotenv=1.0.1=pyhd8ed1ab_1
+  - python-dotenv=0.21.0=py312h06a4308_0
   - python-fastjsonschema=2.20.0=py312h06a4308_0
   - python-json-logger=3.2.1=py312h06a4308_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
-  - python_abi=3.12=5_cp312
+  - python-xxhash=3.5.0=py312h5eee18b_0
+  - python_abi=3.12=6_cp312
+  - pytorch=2.5.1=py3.12_cuda12.4_cudnn9.1.0_0
+  - pytorch-cuda=12.4=hc786d27_7
+  - pytorch-mutex=1.0=cuda
   - pytz=2024.1=py312h06a4308_0
   - pyyaml=6.0.2=py312h5eee18b_0
   - pyzmq=26.2.0=py312h6a678d5_0
-  - qhull=2020.2=hdb19cb5_2
-  - qt-main=5.15.2=h7358343_9
-  - qtconsole=5.6.1=py312h06a4308_0
-  - qtpy=2.4.1=py312h06a4308_0
+  - re2=2024.07.02=hdb19cb5_0
   - readline=8.2=h5eee18b_0
   - referencing=0.30.2=py312h06a4308_0
   - regex=2024.11.6=py312h5eee18b_0
@@ -177,36 +231,48 @@ dependencies:
   - rfc3339-validator=0.1.4=py312h06a4308_0
   - rfc3986-validator=0.1.1=py312h06a4308_0
   - rpds-py=0.22.3=py312h4aa5aa6_0
+  - s2n=1.3.27=hdbd6064_0
+  - safetensors=0.5.3=py312hc50d6dc_0
   - scikit-learn=1.6.1=py312h6a678d5_0
-  - scipy=1.15.1=py312h2809609_0
+  - scipy=1.15.2=py312h23a989f_1
   - send2trash=1.8.2=py312h06a4308_1
   - setuptools=75.8.0=py312h06a4308_0
-  - sip=6.7.12=py312h6a678d5_1
-  - six=1.16.0=pyhd3eb1b0_1
+  - six=1.17.0=py312h06a4308_0
+  - snappy=1.2.1=h6a678d5_0
   - sniffio=1.3.0=py312h06a4308_0
   - soupsieve=2.5=py312h06a4308_0
-  - sqlite=3.45.3=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - sympy=1.13.3=py312h06a4308_1
+  - tbb=2021.8.0=hdb19cb5_0
+  - tenacity=9.0.0=py312h06a4308_0
   - terminado=0.17.1=py312h06a4308_0
   - threadpoolctl=3.5.0=py312he106c6f_0
   - tinycss2=1.4.0=py312h06a4308_0
   - tk=8.6.14=h39e8969_0
+  - tokenizers=0.21.0=py312h526025d_0
+  - torchtriton=3.1.0=py312
   - tornado=6.4.2=py312h5eee18b_0
-  - tqdm=4.67.1=pyhd8ed1ab_1
+  - tqdm=4.67.1=py312he106c6f_0
   - traitlets=5.14.3=py312h06a4308_0
+  - transformers=4.51.1=pyhd8ed1ab_0
   - typing-extensions=4.12.2=py312h06a4308_0
   - typing_extensions=4.12.2=py312h06a4308_0
   - tzdata=2025a=h04d1e81_0
+  - umap-learn=0.5.7=py312h7900ff3_1
   - unicodedata2=15.1.0=py312h5eee18b_1
   - urllib3=2.3.0=py312h06a4308_0
+  - utf8proc=2.6.1=h5eee18b_1
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py312h06a4308_2
   - websocket-client=1.8.0=py312h06a4308_0
+  - werkzeug=3.1.3=py312h06a4308_0
   - wheel=0.45.1=py312h06a4308_0
-  - widgetsnbextension=4.0.13=py312h06a4308_0
   - wordcloud=1.9.4=py312h66e93f0_1
+  - xxhash=0.8.0=h7f8727e_3
   - xz=5.6.4=h5eee18b_1
   - yaml=0.2.5=h7b6447c_0
+  - yarl=1.18.0=py312h5eee18b_0
   - zeromq=4.3.5=h6a678d5_0
   - zlib=1.2.13=h4ab18f5_6
   - zstd=1.5.6=hc292b87_0
+prefix: /home/suna/anaconda3/envs/papers_scrap
